# zeeman_retrieval

./: .gitignore  README.md  disturbed_mag_field.py  environment.yml  grab_mag.py  mag_plot.py  plot.py  pyproject.toml  run.sh  sa.txt  spec_plot.py  zeeman_ycalc_azi.py
assets/abs_lines_per_species/: kimra.xml  tempera.xml
assets/grids/: 24010418_t.xml  ECMWF_jan.xml
catalogue/abs_lines/: abs_lines_per_species.xml  abs_lines_per_species_zeeman_off.xml  abs_lines_per_species_zeeman_off_w_N2.xml
data/abs_lines_per_species/: kimra.xml  tempera.xml
data/configs/: zeeman_off.json  zeeman_on.json  zeeman_on_wrong_component.json  zeeman_on_ztemperature.json
data/grids/: 24010418_z.xml  p_grid_137.xml
data/magfield/231202/: magfield.hdf5
data/measurements/: Data_2024-01-04_15-06-38_RPGFFTS.hdf5
data/measurements/231202/: kimra_RPGFFTS_2023-12-02_01-40-04.hdf5
data/simulation/: kimra.hdf5  tempera.hdf5  ycalc_O2_0.hdf5  ycalc_O2_180.hdf5  ycalc_O2_270.hdf5  ycalc_O2_90.hdf5  ycalc_O2_zeeman_off.hdf5  ycalc_O2_zeeman_on.hdf5
hdf5/measurements/: Data_2024-01-04_16-07-17_RPGFFTS.hdf5
pyarts/: ret.py  ycalc.py  zeeman_ycalc_azi.py
scripts/: disturbed_mag_field.py  grab_mag.py  mag_plot.py  ret_plot.py  spec_plot.py
simulations/: ret.py  ycalc.py
src/simulation_package/: cli.py  files.py  hdf.py  make_grids.py  meas_yc_plot.py  plot_ycalc.py  ret.py  ret_plots.py  retrieval.py  temperature.py  yc.py  ycalc.py
src/simulation_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: example.py  retrieval.py  ycalc.py
utils/: hdf.py  temperature.py
(+3 files in other folders)
