[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation_package"
version = "0.0.2"
authors = [
  { name="Richard Johansson", email="richard.johansson@irf.se" },
]

description = "modules to handle various tasks "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
simpaper = "simulation_package.cli:cli"

[tool.ruff]
line-length = 120
